--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,23 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	font-size: 20px;
 	color: red;
 }
+
+body {
+  margin: 0px;
+  padding: 0px;
+  min-width: 320px;
+  position: relative;
+  overflow-x: hidden;
+}
+main {
+  background-image: url(./images/background.png);
+  background-position: top center;
+  background-attachment: fixed;
+  min-height: 668px;
+  position: relative;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
 .container-fluid{
     padding: 0;
 }
@@ -182,14 +199,12 @@ border: 1px solid #E9E9E9;
 border-radius: 22.5px;
 }
 label{
+    padding:  10px 0 10px 0;
     font-family: 'Raleway';
 font-style: normal;
 font-weight: 600;
 font-size: 16px;
 line-height: 183.2%;
-/* or 29px */
-
-
 color: #000000;
 }
 .icon-password{
@@ -203,8 +218,24 @@ color: #000000;
 .password-wrapper{
     position: relative;
 }
-
-
+.check-wrapper{
+    padding: 15px 0 15px 0;
+}
+.check-wrapper a{
+color: #66B855!important
+}
+.submit{
+    color: #fff;
+    font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+font-size: 19px;
+line-height: 22px;
+    background: #66B855;
+    align-items: center;
+text-align: center;
+border-radius: 30px;
+}
 
 /* Classes for validation inputs */
 .right{
@@ -214,6 +245,9 @@ border: 1.5px solid #66B855;
 .wrong{
     background: rgba(234, 67, 53, 0.1);
 border: 1.5px solid #EA4335;
+}
+.warning-wrapper{
+    display: none;
 }
 .warning-massage{
     font-family: 'Raleway';
@@ -225,22 +259,9 @@ text-align: right;
 color: #EA4335;
 
 }
-body {
-  margin: 0px;
-  padding: 0px;
-  min-width: 320px;
-  position: relative;
-  overflow-x: hidden;
-}
-main {
-  background-image: url(./images/background.png);
-  background-position: top center;
-  background-attachment: fixed;
-  min-height: 668px;
-  position: relative;
-  -webkit-background-size: cover;
-  background-size: cover;
-}
+
+
+
 
 @media (max-width: 1100px) {
   nav,.signup-btn,.login-btn{
