--- a/styles.css
+++ b/styles.css
@@ -235,8 +235,32 @@ line-height: 22px;
     align-items: center;
 text-align: center;
 border-radius: 30px;
+margin-bottom: 28px;
 }
+.checkbox{
+    padding: 7px 30px 7px 30px ;
+    margin-bottom: 13px;
+background: #F9F9F9;
+border: 1px solid #D3D3D3;
+box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.08);
+border-radius: 20px;
+}
+.devider{
+    margin: 5px;
+    font-family: 'Raleway';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 183.2%;
+text-align: center;
 
+color: #898989;
+}
+.line{
+    width: 179px;
+    border: 1px solid #898989;
+
+}
 /* Classes for validation inputs */
 .right{
     background: rgba(102, 184, 85, 0.1);
