--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,10 @@ input{
 input[type="submit"]{
     padding-left: 0;
 }
+input[type="password"]{
+    font-size: 50px;
+    letter-spacing: -3px;
+}
 label{
     padding:  10px 0 10px 0;
     font-family: 'Raleway';
